[project]
name = "przewodo-utils"
description = "Utilities to make it easy to develop advanced Workflows without having to use a lot of nodes for simple stuff."
version = "1.0.3"
license = { text = "MIT License" }
dependencies = []

[project.urls]
Repository = "https://github.com/przewodo/ComfyUI-Przewodo-Utils"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "przewodo"
DisplayName = "ComfyUI-Przewodo-Utils"
Icon = "https://raw.githubusercontent.com/przewodo/ComfyUI-Przewodo-Utils/main/images/icon_564.png"
includes = []
